--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,21 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/coordinator_layout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.exmple.lenovo.mynotesapp.view.MainActivity">
-    <include
-        android:id="@+id/include"
-        layout="@layout/content_main" />
+    android:orientation="vertical"
+    android:fitsSystemWindows="true"
+    tools:context=".view.DetailActivity">
+
+    <ImageView
+        android:id="@+id/ivGambarBerita"
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
+        android:scaleType="fitXY"
+        android:src="@mipmap/ic_launcher" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_add_white_24dp" />
+        app:layout_anchor="@+id/ivGambarBerita"
+        app:layout_anchorGravity="right|bottom"
+        app:srcCompat="@drawable/ic_open_in_browser_black_24dp" />
+
+    <include layout="@layout/content_detail" />
 
 </android.support.design.widget.CoordinatorLayout>
