--- a/app/src/main/res/layout/berita.xml
+++ b/app/src/main/res/layout/berita.xml
@@ -1,10 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_marginVertical="10dp"
+    android:layout_marginHorizontal="10dp"
+    app:cardElevation="10dp"
+    app:cardCornerRadius="10dp">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingVertical="15dp">
+    <ImageView
+        android:id="@+id/ivPosterBerita"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Frgamnet2"/>
-
-</android.support.constraint.ConstraintLayout>
+        android:layout_height="150dp"
+        android:layout_marginHorizontal="15dp"
+        android:scaleType="fitXY"
+        android:src="@mipmap/ic_launcher"/>
+    <TextView
+        android:id="@+id/tvJudulBerita"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:layout_marginVertical="10dp"
+        android:layout_marginHorizontal="15dp"
+        android:textColor="@color/colorPrimaryDark"
+        android:text="@string/judul_artikel_berita"/>
+    <LinearLayout
+        android:layout_marginHorizontal="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/tvTglTerbit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sabtu_4_may_2019"/>
+        <TextView
+            android:layout_marginHorizontal="15dp"
+            android:id="@+id/tvPenulis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/oleh_bustomi" />
+    </LinearLayout>
+    </LinearLayout>
+</android.support.v7.widget.CardView>
