--- a/app/src/main/res/layout/note_list_row.xml
+++ b/app/src/main/res/layout/note_list_row.xml
@@ -35,6 +35,7 @@
         android:layout_width="213dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/timestamp"
+        android:maxLength="25"
         android:layout_toRightOf="@id/dot"
         android:gravity="start|end"
         android:textColor="@color/note_list_text"
