--- a/app/src/main/res/layout/activity_berita.xml
+++ b/app/src/main/res/layout/activity_berita.xml
@@ -6,8 +6,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".view.Berita">
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#fff">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvListBerita"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
