--- a/app/src/main/res/layout/berita.xml
+++ b/app/src/main/res/layout/berita.xml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_marginVertical="10dp"
-    android:layout_marginHorizontal="10dp"
-    app:cardElevation="10dp"
-    app:cardCornerRadius="10dp">
-    <LinearLayout
-        android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingVertical="15dp">
+        android:layout_marginLeft="11dp"
+        android:layout_marginRight="11dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginBottom="7dp"
+        app:cardElevation="@dimen/cardview_default_elevation"
+        app:cardCornerRadius="10dp">
+    <LinearLayout
+        android:background="?android:attr/selectableItemBackground"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
     <ImageView
         android:id="@+id/ivPosterBerita"
+        android:transitionName="img"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_marginHorizontal="15dp"
-        android:scaleType="fitXY"
+        android:layout_height="200dp"
+        android:scaleType="centerCrop"
+        tools:ignore="UnusedAttribute"
         android:src="@mipmap/ic_launcher"/>
     <TextView
         android:id="@+id/tvJudulBerita"
@@ -34,17 +41,39 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_event_note_24dp"/>
         <TextView
+            android:layout_marginHorizontal="2dp"
+            android:paddingTop="3dp"
             android:id="@+id/tvTglTerbit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/sabtu_4_may_2019"/>
-        <TextView
-            android:layout_marginHorizontal="15dp"
-            android:id="@+id/tvPenulis"
+            <TextView
+            android:layout_marginHorizontal="10dp"
+            android:paddingTop="3dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/oleh_bustomi" />
+            android:text="Oleh : "/>
+        <TextView
+            android:layout_marginLeft="-10dp"
+            android:id="@+id/Penulis"
+            android:paddingTop="3dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Bustomi"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingVertical="7dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
     </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
+</FrameLayout>
