--- a/app/src/main/res/layout/activity_app_info.xml
+++ b/app/src/main/res/layout/activity_app_info.xml
@@ -20,7 +20,7 @@
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/press_release"
+        android:text="++++++++++"
         android:textColor="#fff"
         android:textSize="30dp"
         android:textStyle="bold" />
@@ -33,16 +33,18 @@
         android:textSize="15dp" />
 
     <ImageView
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="-60dp"
         android:id="@+id/logo"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:src="@drawable/ic_event_note_black_24dp" />
+        android:layout_gravity="center"
+        android:layout_width="220dp"
+        android:layout_height="350dp"
+        android:src="@mipmap/ic_icon" />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_gravity="center">\
+        android:layout_marginTop="-65dp"
+        android:layout_gravity="center">
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
