--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -17,20 +17,11 @@
         android:orientation="vertical">
         <ImageView
             android:id="@+id/iv"
-            android:src="@drawable/ic_event_note_black_24dp"
+            android:src="@mipmap/ic_icon"
             android:layout_gravity="center"
-            android:layout_width="200dp"
-            android:layout_height="200dp" />
-        <TextView
-            android:id="@+id/tv"
-            android:layout_marginTop="-15dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/app_name"
-            android:textSize="35sp"
-            android:textStyle="bold"
-            android:textColor="#fff"/>
+            android:layout_width="220dp"
+            android:layout_height="350dp" />
+
 
     </LinearLayout>
 
