--- a/app/src/main/res/layout/app_widget.xml
+++ b/app/src/main/res/layout/app_widget.xml
@@ -11,23 +11,13 @@
         android:orientation="vertical"
         android:gravity="center">
 
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+        <ImageButton
+            android:id="@+id/btnimg"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
             android:backgroundTint="@color/colorPrimary"
             android:layout_gravity="center"
-            android:background="@drawable/ic_event_note_black_24dp"/>
-
-        <Button
-            android:id="@+id/btnwidget"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:background="#000"
-            android:text="Tambah Note"
-            android:typeface="monospace"
-            android:textColor="@color/colorPrimary"
-            android:textStyle="bold" />
+            android:background="@mipmap/ic_icon"/>
     </LinearLayout>
 
 </LinearLayout>
